# pytest_course

./: README.md
cards_proj/: pyproject.toml
ch01/notes/: 0_contents.md  1_installing_pytest.md  2_running_pytest.md  3_discovery.md  4_outcomes.md  5_review.md  6_exercises.md  7_next.md
ch02/notes/: 0_contents.md  1_installing_cards.md  2_assert.md  3_review.md  4_check_your_setup.md  5_exercises.md  6_next.md
ch03/: test_count_initial.py
ch03/a/: conftest.py
ch03/notes/: exercises.md  review.md
ch04/notes/: exercises.md  review.md
ch05/notes/: exercises.md  review.md
ch06/bad/: pytest.ini
ch06/notes/: exercises.md  review.md
exercises/ch02/: test_card_mod.py
extras/: create_activate.bash
